--- a/Projects.html
+++ b/Projects.html
@@ -37,19 +37,19 @@
         <section id="main" class="wrapper">
             <div class="inner">
                 <h1 class="major">Hand Detection</h1>
-                <span class="image fit"><img src="images/HandDetection.png" alt="" /></span>
+                <span class="image fit"><img src="images/hand_detection_4.png" alt="" /></span>
                 <p>MediaPipe Hand Landmarker model is a ML Model that lets you detect the landmarks of the hand in an image.</p>
-                <p>To find out more
-                    <a href="https://github.com/chemutai254/ML_Projects/blob/main/Computer_Vision/Hand_Detection.ipynb">Click Here</a></p>
+                <p>To find out more on <b>Hand Detection</b>
+                    <a href="https://github.com/chemutai254/ML_Projects/blob/main/Computer_Vision/Hand_Detection.ipynb"><b>Click Here</b></a></p>
             </div>
         </section>
 
         <section id="main" class="wrapper">
             <div class="inner">
                 <h1 class="major">Pose Detection</h1>
-                <span class="image fit"><img src="images/Pose_Detection.png" alt="" /></span>
+                <span class="image fit"><img src="images/pose_detection_.png" alt="" /></span>
                 <p>MediaPipe is a ML Model that identifies and classifies real-time pose estimation of human body parts and joints of images and videos.</p>
-                <p>For further details<a href="https://github.com/chemutai254/ML_Projects/blob/main/Computer_Vision/Pose_Detection.ipynb">Click Here</a></p>
+                <p>For further details on <b>Pose Detection</b> <a href="https://github.com/chemutai254/ML_Projects/blob/main/Computer_Vision/Pose_Detection.ipynb">Click Here</a></p>
             </div>
         </section>
 
@@ -58,7 +58,7 @@
                 <h1 class="major">Face, Eyes, and Smile Detection</h1>
                 <span class="image fit"><img src="images/face_eyes_smile_detection.png" alt="" /></span>
                 <p>OpenCV is a ML Model used in Face, Eyes, and Smile Detection. </p>
-                <p>For further details <a href="https://github.com/chemutai254/ML_Projects/blob/main/Computer_Vision/Computer_Vision.ipynb">Click Here</a></p>
+                <p>For further details on <b>Face, Eyes, and Smile Detection</b> <a href="https://github.com/chemutai254/ML_Projects/blob/main/Computer_Vision/Computer_Vision.ipynb"><b>Click Here</b></a></p>
             </div>
         </section>
 
@@ -66,25 +66,68 @@
             <h1>Machine Learning Projects</h1>
             <div class="inner">
                 <h1 class="major">Heart Disease Prediction</h1>
-                <span class="image fit"><img src="images/EDA_1.png" alt="" /></span>
-                <p>Heart Disease Prediction using Supervised Learning: Case of Peterside Hospital, Lagos, Nigeria</p>
-                <p>Developed a Machine Learning Model that can predict the likelihood of a person having a Heart Disease based on the following features:
+                <span class="image fit"><img src="images/heart_disease.png" alt="" /></span>
+                <h2>Heart Disease Prediction using Supervised Learning: Case of Peterside Hospital, Lagos, Nigeria</h2>
+                <h3>About Peterside Hospital</h3>
+                <p>Peterside Hospital is a private hospital located in Lagos, Nigeria. It was founded in 2000 by Dr. Efemena Ikpro, a renowned Nigerian physician. The hospital provides a wide range of medical services, including general medicine, surgery,
+                    paediatrics, obstetrics and gynaecology, cardiology, neurology, and oncology. Peterside Hospital is known for its state-of-the-art facilities, modern equipment, and highly skilled medical professionals. The hospital has a team of over
+                    300 medical personnel, including doctors, nurses, and other healthcare professionals, who are trained locally and internationally. The hospital has several specialized clinics, including a diabetes clinic, a fertility clinic, a heart
+                    clinic, and a cancer clinic. It also offers services such as health check-ups, laboratory tests, and imaging services.</p>
+                <h3>Objective</h3>
+                <p>To build a machine-learning model that can predict the likelihood of a person having a heart disease based on the given features.</p>
+                <p>The features include:
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>age</li>
+                        <li>sex</li>
+                        <li>chest pain type (cp)</li>
+                        <li>resting blood pressure (trestbps)</li>
+                        <li>serum cholesterol (chol)</li>
+                        <li>fasting blood sugar (fbs)</li>
+                        <li>resting electrocardiographic results (restecg)</li>
+                        <li>maximum heart rate achieved (thalach)</li>
+                        <li>exercise-induced angina (exang)</li>
+                        <li>ST depression induced by exercise relative to rest (oldpeak)</li>
+                        <li>the slope of the peak exercise ST segment (slope)</li>
+                        <li>number of major vessels colored by flourosopy (ca)</li>
+                        <li>thalassemia (thal)</li>
+                        <li>target</li>
                     </ul>
                 </p>
-                <p>For further EDA insights <a href="https://github.com/chemutai254/ML_Projects/blob/main/EDA/Dune_Sales_Analysis.ipynb">Click Here</a>.</p>
+                <p>For further Peterside Hospital Heart Disease Prediction insights <a href="https://github.com/chemutai254/ML_Projects/blob/main/Heart_Disease/Peterside_Hospital_Heart_Disease.ipynb"><b>Click Here</b></a>.</p>
             </div>
         </section>
+
+        <section id="main" class="wrapper">
+            <div class="inner">
+                <h1 class="major">Customer Segmentation using Clustering Algorithm K-Means</h1>
+                <p>K-Means clustering is an unsupervised learning technique that is suitable for working with unlabelled data that lacks predefined categories or groups. The primary objective of this segment is to group similar data points together, with
+                    the number of groups determined by the value of K. The algorithm follows an iterative approach and assigns each data point to one of the K groups based on the features that are provided.</p>
+                <span class="image fit"><img src="images/ULKmeans.png" alt="" /></span>
+                <h2>Customer Segmentation Using Unsupervised Learning Techniques: Case of Selore Nigeria</h2>
+                <h3>About the business - Selore</h3>
+                <p>Selore Nigeria is a popular electronics retail chain in Nigeria that specializes in the sale of mobile phones, tablets, laptops, and other related accessories. The company was founded in 2022 and has since grown to become one of the largest
+                    retailers of mobile phones and related products in the country. Selore Nigeria offers a wide range of mobile phones from top brands such as Samsung, Apple, Nokia, and Huawei, among others. The company is also known for its after- sales
+                    support, including repairs and maintenance services, as well as trade-in options for old devices. With its numerous outlets nationwide, Selore Nigeria is a go-to destination for many Nigerians seeking to purchase mobile phones and
+                    related accessories.</p>
+                <h3>Business Problem</h3>
+                <p>A retail company wants to understand the spending behaviour of its customers to target them with personalized marketing campaigns. They have collected data on customer demographics (age, gender) and spending habits (annual income, spending
+                    score) and want to segment their customers based on their spending behaviour. The objective of this project is to build a customer segmentation model to help the retail company in developing targeted marketing strategies.</p>
+                <h3>Objective</h3>
+                <p>The goal of this project is to segment customers based on their purchasing behaviour and demographic information. We will use unsupervised learning techniques to identify groups of customers with similar behaviour and characteristics.
+                    This information can be used to develop targeted marketing campaigns, personalize product recommendations, and optimize pricing strategies.</p>
+                <p>The retail company has collected data on 200 customers containing:
+                    <ul>
+                        <li>CustomerID</li>
+                        <li>Gender</li>
+                        <li>Age</li>
+                        <li>Annual_Income_(k$)</li>
+                        <li>Spending_Score.</li>
+                    </ul>
+                </p>
+                <p>For further Selore Customer Segmentation insights <a href="https://github.com/chemutai254/ML_Projects/blob/main/Customer_Segmentation/Customer_Segmentation.ipynb"><b>Click Here</b></a>.</p>
+            </div>
+        </section>
+
 
         <section id="main" class="wrapper">
             <h1>Exploratory Data Analysis</h1>
@@ -108,7 +151,7 @@
                         <li>Unit_Price</li>
                     </ul>
                 </p>
-                <p>For further EDA insights <a href="https://github.com/chemutai254/ML_Projects/blob/main/EDA/Dune_Sales_Analysis.ipynb">Click Here</a>.</p>
+                <p>For further <b>Dunes</b> EDA insights, <a href="https://github.com/chemutai254/ML_Projects/blob/main/EDA/Dune_Sales_Analysis.ipynb"><b>Click Here</b></a>.</p>
             </div>
         </section>
 
@@ -143,7 +186,7 @@
                         <li>car_age</li>
                     </ul>
                 </p>
-                <p>For further reading <a href="https://github.com/chemutai254/ML_Projects/blob/main/EDA/SoranAutomobiles.ipynb">Click Here</a>.</p>
+                <p>For further <b>Soran Automobiles Analysis</b>, <a href="https://github.com/chemutai254/ML_Projects/blob/main/EDA/SoranAutomobiles.ipynb"><b>Click Here</b></a>.</p>
             </div>
         </section>
 
