--- a/Projects.html
+++ b/Projects.html
@@ -159,33 +159,34 @@
             <div class="inner">
                 <h1 class="major">Exploratory Data Analysis on Soran Automobiles Data </h1>
                 <span class="image fit"><img src="images/EDA_2.png" alt="" /></span>
-                <p>
-                    <h3>Problem Overview</h3>
-                    The company director is seeking to gain valuable insights that can help:
-                    <ul>
-                        <li>Identify popular car models and types.</li>
-                        <li>Understand customer preferences.</li>
-                        <li>Optimize pricing strategies.</li>
-                        <li>Improve after-sales services and support.</li>
-                    </ul>
-                </p>
-                <p>The Director believes that that the analysis will help them make data-driven decisions and take business to the next level.</p>
-                <p>EDA consists of Feature Engineering, identifying and dealing with missing data, and eliminating duplicates.</p>
-                <p>The dataset consists of the following parameters:
-                    <ul>
-                        <li>car: Name or brand of the car.</li>
-                        <li>price: The price of the car in the local currency.</li>
-                        <li>body: The type of the car's body (e.g., sedan, hatchback, crossover, etc.).</li>
-                        <li>mileage: The distance the car has traveled in kilometers.</li>
-                        <li>engV: The engine volume of the car in liters.</li>
-                        <li>engType: The type of engine used in the car (e.g., gasoline, diesel, electric, etc.).</li>
-                        <li>registration: Whether the car has been registered with the local authorities or not.</li>
-                        <li>year: The year when the car was manufactured.</li>
-                        <li>model: The model's name or number of the car.</li>
-                        <li>drive</li>
-                        <li>car_age</li>
-                    </ul>
-                </p>
+                <h3>About Soran Automobiles</h3>
+                <p>Soran Automobiles is an automobile company that specializes in providing high-quality vehicles to customers worldwide. With a focus on innovation and customer satisfaction, Soran Automobiles has become a leading brand in the industry.
+                    At Soran Automobiles, we understand the importance of a reliable and efficient vehicle, which is why we offer a wide range of cars with different specifications to meet the needs of our diverse customer base. Our cars are equipped
+                    with advanced technology and safety features to ensure a comfortable and secure driving experience.</p>
+                <h3>Problem Overview</h3>
+                <p>The company director is seeking to gain valuable insights that can help:</p>
+                <ul>
+                    <li>Identify popular car models and types.</li>
+                    <li>Understand customer preferences.</li>
+                    <li>Optimize pricing strategies.</li>
+                    <li>Improve after-sales services and support.</li>
+                </ul>
+                <p></p>
+                <p>The Director believes that that the analysis will help them make data-driven decisions and take business to the next level. EDA consists of Feature Engineering, identifying and dealing with missing data, and eliminating duplicates. The
+                    dataset consists of the following parameters:</p>
+                <ul>
+                    <li>car: Name or brand of the car.</li>
+                    <li>price: The price of the car in the local currency.</li>
+                    <li>body: The type of the car's body (e.g., sedan, hatchback, crossover, etc.).</li>
+                    <li>mileage: The distance the car has traveled in kilometers.</li>
+                    <li>engV: The engine volume of the car in liters.</li>
+                    <li>engType: The type of engine used in the car (e.g., gasoline, diesel, electric, etc.).</li>
+                    <li>registration: Whether the car has been registered with the local authorities or not.</li>
+                    <li>year: The year when the car was manufactured.</li>
+                    <li>model: The model's name or number of the car.</li>
+                    <li>drive</li>
+                    <li>car_age</li>
+                </ul>
                 <p>For further <b>Soran Automobiles Analysis</b>, <a href="https://github.com/chemutai254/ML_Projects/blob/main/EDA/SoranAutomobiles.ipynb"><b>Click Here</b></a>.</p>
             </div>
         </section>
