--- a/Projects.html
+++ b/Projects.html
@@ -173,20 +173,21 @@
                 </ul>
                 <p></p>
                 <p>The Director believes that that the analysis will help them make data-driven decisions and take business to the next level. EDA consists of Feature Engineering, identifying and dealing with missing data, and eliminating duplicates. The
-                    dataset consists of the following parameters:</p>
-                <ul>
-                    <li>car: Name or brand of the car.</li>
-                    <li>price: The price of the car in the local currency.</li>
-                    <li>body: The type of the car's body (e.g., sedan, hatchback, crossover, etc.).</li>
-                    <li>mileage: The distance the car has traveled in kilometers.</li>
-                    <li>engV: The engine volume of the car in liters.</li>
-                    <li>engType: The type of engine used in the car (e.g., gasoline, diesel, electric, etc.).</li>
-                    <li>registration: Whether the car has been registered with the local authorities or not.</li>
-                    <li>year: The year when the car was manufactured.</li>
-                    <li>model: The model's name or number of the car.</li>
-                    <li>drive</li>
-                    <li>car_age</li>
-                </ul>
+                    dataset consists of the following parameters:
+                    <ul>
+                        <li>car: Name or brand of the car.</li>
+                        <li>price: The price of the car in the local currency.</li>
+                        <li>body: The type of the car's body (e.g., sedan, hatchback, crossover, etc.).</li>
+                        <li>mileage: The distance the car has traveled in kilometers.</li>
+                        <li>engV: The engine volume of the car in liters.</li>
+                        <li>engType: The type of engine used in the car (e.g., gasoline, diesel, electric, etc.).</li>
+                        <li>registration: Whether the car has been registered with the local authorities or not.</li>
+                        <li>year: The year when the car was manufactured.</li>
+                        <li>model: The model's name or number of the car.</li>
+                        <li>drive</li>
+                        <li>car_age</li>
+                    </ul>
+                </p>
                 <p>For further <b>Soran Automobiles Analysis</b>, <a href="https://github.com/chemutai254/ML_Projects/blob/main/EDA/SoranAutomobiles.ipynb"><b>Click Here</b></a>.</p>
             </div>
         </section>
@@ -196,7 +197,11 @@
             <div class="inner">
                 <h1 class="major">Data Analysis using Tableau: Dula Chains Supply Chain Case Study </h1>
                 <span class="image fit"><img src="images/DulaChain.png" alt="" /></span>
-                <p><b>DULA CHAINS DASHBOARD</b> with <b>Tableau</b></p>
+                <h3>About Dula Chains</h3>
+                <p>DulaChains Solution is a leading global retail supply chain business revolutionizing how products are sourced and delivered worldwide. With our unwavering commitment to excellence, innovation, and sustainability, we provide end-to-end
+                    supply chain solutions that empower retailers, manufacturers, and suppliers to thrive in an ever- evolving marketplace. Our global reach spans across continents, connecting diverse markets and bridging the gap between suppliers and
+                    retailers. We leverage our extensive network to source the highest quality products, and deliver them to our clients' doorsteps in a timely manner. We take care of the entire supply chain process, allowing our clients to focus on their
+                    core business objectives.</p>
                 <p>I recently conducted a Supply Chain Analysis using Tableau, and I am excited to share my findings.</p>
                 <p>
                     <h3>Problem Overview</h3>
@@ -208,9 +213,7 @@
                         <li>Understanding its Profits trends.</li>
                         <li>Predicting future profit trend.</li>
                     </ul>
-                </p>
-
-                <p>The dataset consists of the following parameters:
+                    The dataset consists of the following parameters:
                     <ul>
                         <li>Customer ID – Unique Customer identification</li>
                         <li>Customer Market- Geographic grouping of customer countries</li>
