--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <section id="intro" class="wrapper style1 fullscreen fade-up">
             <div class="inner">
                 <h1>Nancy Chemutai</h1>
+                <!-- <div class="container">
+                    <img src="../images/Chemu.jpg" class="rounded-circle" alt="" width="304" height="236">
+                </div> -->
                 <p>I am a self-driven <b>Data Scientist</b> with the aim of solving real-world challenges by providing technical solutions an individual, business, organization and international levels. I am proficient in conducting data analysis, Exploratory
                     Data Analysis (EDA), Feature Engineering, Data Preprocesing, and Modelling using supervised and unsupervised learning algorithms. <br> </p>
                 <ul class="actions">
