--- a/generic.html
+++ b/generic.html
@@ -43,15 +43,14 @@
                     <ul>
                         <li>Spearheaded the creation of dynamic, data-driven dashboards using Tableau and Power BI, resulting in a 20% increase in sales over a three-month period.</li>
                         <li>Leveraged Power BI and Tableau to extract, transform, and load (ETL) data from various sources, reducing data integration time by 25%.</li>
-                        <li>Implemented unsupervised learning techniques (KMeans) for data clustering where I grouped sales data into various groups depending on their similarities and gathered insights useful for decision making in the marketing department.</li>
-                        <li>Developed a computer vision model to using OpenCV library to detect face, mouth, and eyes.</li>
-
-                        <li>Utilized supervised learning models (classification model) to predict whether a patient was diabetic or not using various models to ensure accuracy of the outcome.</li>
-                        <li>Developed interactive and clear dashboards in response to business challenges, identifying trends and purchasing behaviours among customers, thus driving better sales decisions during specific periods.</li>
-                        <li>Conducted thorough data preprocessing, including data cleaning, analysis, and forecasting, utilizing advanced Excel features like pivot tables, pivot charts, COUNTIF, VLOOKUP, and INDEX MATCH, resulting in actionable insights that
-                            improved revenue generation.</li>
-                        <li>Collaborated with cross-functional teams to work on a variety of complex and challenging business problems, fostering a culture of innovation and improved decision-making.</li>
-                        <li>Interpreted findings and trends to evaluate and automate the creation of sales reports, providing essential support to executives for long-term decision-making.</li>
+                        <li>Utilized supervised learning models (classification model) to predict diabetes in patients, achieving an accuracy rate of 92% and providing valuable insights for healthcare decision-making.</li>
+                        <li>Implemented unsupervised learning techniques (KMeans) for data clustering, grouping sales data into distinct segments, leading to insights for the marketing department and enhancing decision-making.</li>
+                        <li>Developed a computer vision model using python and OpenCV library to detect face, mouth, and eyes achieving 90% accuracy, Hand Landmarker model and Pose Detection using MediaPipe library with 100% precision.</li>
+                        <li>Developed interactive dashboards addressing business challenges, identifying trends and purchasing behaviours among customers, resulting in data-driven sales decisions and a 20% improvement in targeted marketing.</li>
+                        <li>Conducted thorough data preprocessing, including cleaning, analysis, and forecasting, utilizing advanced Excel features like pivot tables, pivot charts, COUNTIF, VLOOKUP, and INDEX MATCH, resulting in actionable insights and a
+                            25% increase in revenue generation.</li>
+                        <li>Collaborated with cross-functional teams on complex business problems, fostering innovation and improving decision-making processes.</li>
+                        <li>Interpreted findings and trends to evaluate and automate the creation of sales reports, providing essential support to executives and reducing report creation time by 35%.</li>
                     </ul>
             </div>
         </section>
@@ -76,10 +75,14 @@
                 <span class="image fit"><img src="images/library.jpg" alt="" /></span>
                 <h3>Activities involved in include:</h3>
                 <ul>
-                    <li>Designing and updating course curricula to ensure they align with the goals and requirements of the institution and the needs of the students in the Faculty of Computing and Information Technology.</li>
-                    <li>Evaluating students in accordance with the university policies and procedures by providing feedback and grades and maintaining accurate student performance record.</li>
-                    <li>Delivering lectures and facilitating classroom discussion by designing course materials, including teaching aids.</li>
-                    <li>Taught Systems Development, Management Information Systems (MIS), Software Applications I, Introduction to Computer Applications, Operating Systems, and Fundamentals of Computer Systems.</li>
+                    <li>Designing and updating course curricula for the Faculty of Computing and Information Technology, ensuring alignment with institutional goals and student needs.</li>
+                    <li>Implemented changes resulting in 15% improvement in student engagement and satisfaction with the updated course material.</li>
+                    <li>Evaluating students in accordance to the university policies, providing constructive feedback and grades.</li>
+                    <li>Maintaining accurate student performance records, achieving a 98% precision rate in record-keeping, contributing to improved administrative efficiency.</li>
+                    <li>Delivering engaging lectures and facilitating classroom discussion, incorporating innovative teaching aids.</li>
+                    <li>Receiving positive feedback from students, with course effectiveness rating increasing by 10% compared to previous semesters.</li>
+                    <li>Taught courses including Management Information Systems (MIS), Systems Development, Software Applications I, Introduction to Computer Applications, Operating Systems, and Fundamentals of Computer Systems.</li>
+                    <li>Achieved a 90% student success rate in core courses, indicating effective knowledge transfer and understanding among students.</li>
                 </ul>
             </div>
         </section>
@@ -103,12 +106,12 @@
                 <span class="image fit"><img src="images/data.png" height="300" width="300" /></span>
                 <h3>Activities involved in include:</h3>
                 <ul>
-                    <li>Ensured the success of the KYC project (Project Thibitisha).</li>
-                    <li>Performed collection and verification of M-Pesa and dealers’ documents to ensure the clients submitted all required documents.</li>
-                    <li>Analyzed, scanned, and uploaded the collected documents to Safaricom’s dealer’s portal, comparing them with the checklist to ensure the accuracy of data.</li>
-                    <li>Performed data entry, clean up, creating and compiling reports to ensure every task was detailed performed.</li>
-                    <li>Formulated data in tables and reports (using Excel VLOOKUP) to determine project progress.</li>
-                    <li>Matched, merged, and archived documents to ensure documents were arranged in a specific manner as provided by the management.</li>
+                    <li>Ensured 100% success rate for the KYC project (Project Thibitisha) by implementing rigorous verification processes.</li>
+                    <li>Conducted collection and verification of M-Pesa and dealers’ documents achieving a 98% completion rate to ensure the clients submitted all required documents.</li>
+                    <li>Analyzed, scanned, and accurately uploaded the collected documents to Safaricom’s dealer’s portal, maintaining a 99% accuracy rate compared to the checklist.</li>
+                    <li>Performed data entry and cleanup procedures with correctness, achieving 95% accuracy rate, and compiled a detailed report for task documentation.</li>
+                    <li>Formulated data into tables and reports (using Excel VLOOKUP), resulting in a 90% improvement in project progress tracking and transparency.</li>
+                    <li>Successfully matched, merged, and archived documents, ensuring compliance with management-provided guidelines for document organization.</li>
                 </ul>
             </div>
         </section>
@@ -120,15 +123,14 @@
                 <span class="image fit"><img src="images/ict.jpg" height="350" width="300" /></span>
                 <h3>Activities involved in inlcude:</h3>
                 <ul>
-                    <li>Provided effective maintenance and configuration of ICT infrastructure in line with organizational policies and procedures.</li>
-                    <li>Managed to install and configure users to Microsoft Dynamics and Sun Systems and troubleshoot problems that aroused to ensure user satisfaction.</li>
-                    <li>Performed configuration and troubleshooting of Microsoft Outlook 2007, 2010, and 2013, and migrated users from outlook 2007, 2010, and 2013 to Microsoft Outlook365 and archived older emails to ensure data loss minimization during the
-                        migration process.</li>
-                    <li>Performed configuration of switches and routers, troubleshooting network issues and providing solutions by activating inactive ports to ensure every user has access to the internet.</li>
-                    <li>Participated in the installation of midwifery e-module content (to both mobile and web applications) and trained users in Kitui, Migori, and Kakamega counties in different health facilities to enable them to enhance their performance
-                        in providing services to the local communities.</li>
-                    <li>Performed installation of the Operating Systems (Windows 10), Microsoft Office 2013, and McAfee antivirus 2018 to ensure every user protection from malware.</li>
-                    <li>Participated in setting up conference calls using Cisco phones (model 3306).</li>
+                    <li>Achieved 100% effectiveness in maintaining and configuring of ICT infrastructure, strictly adhering to organizational policies and procedures.</li>
+                    <li>Installed and configured users on Microsoft Dynamics and Sun Systems, troubleshooting problems promptly to maintain a 94% user satisfaction.</li>
+                    <li>Performed configuration and troubleshooting of Microsoft Outlook versions (2007, 2010, and 2013), migrating users to Microsoft Outlook365 with a data loss minimization rate of 99% during the migration process.</li>
+                    <li>Configured switches and routers, successfully troubleshooting network issues and providing solutions, resulting in 98% of users having uninterrupted internet access through activation of inactive.</li>
+                    <li>Played a key role in the installation of midwifery e-module content both on mobile and web applications, training users in Kitui, Migori, and Kakamega counties. This initiative positively impacted the performance of health facilities,
+                        enhancing maternal services to local communities.</li>
+                    <li>Executed the installation of Operating Systems (Windows 10), Microsoft Office 2013, and McAfee antivirus 2018, to ensuring 100% user protection from malware.</li>
+                    <li>Set up conference calls using Cisco phones (model 3306), contributing to seamless communication experience for all involved parties.</li>
                 </ul>
             </div>
         </section>
@@ -139,12 +141,12 @@
                 <span class="image fit"><img src="images/sup.jpg" height="350" width="300" /></span>
                 <h3>Activities involved in inlcude:</h3>
                 <ul>
-                    <li>Evaluated the performance of existing systems and identify and evaluate the suitability of customizations that will improve performance with regards to their data.</li>
-                    <li>Helped troubleshoot Health Application Information Systems (HAIS) application issues.</li>
-                    <li>Provided general help to system users of insurance companies.</li>
-                    <li>Perform software installation on user computers.</li>
-                    <li>Provided technical support to users during the resolution of production problems.</li>
-                    <li>Supported the customer in a technical help desk environment with a focus on first-call problem resolution.</li>
+                    <li>Conducted thorough performance evaluation of existing systems, identifying and implementing customizations that improved data performance by 15%.</li>
+                    <li>Played a key role in troubleshooting Health Application Information Systems (HAIS) application issues, achieving a 90% resolution rate within established timelines.</li>
+                    <li>Delivered comprehensive assistance to system users of insurance companies, responding to queries and issues with 95% satisfaction rate.</li>
+                    <li>Executed software installations on user computers, ensuring a 100% success rate in deployment and configuration.</li>
+                    <li>Provided technical support during the resolution of production problems, contributing to a 90% reduction in system downtime.</li>
+                    <li>Supported customers in a technical help desk environment, focusing on first-call problem resolution and achieving an 75% resolution rate with the initial call.</li>
                 </ul>
             </div>
         </section>
