Changed what I do

--- a/generic.html
+++ b/generic.html
@@ -36,7 +36,7 @@
         <!-- Main -->
         <section id="main" class="wrapper">
             <div class="inner">
-                <h2 class="major">Data Science Consultant, 10Alytics</h2>
+                <h2 class="major">Data Scientist (Part-time), 10Alytics</h2>
                 <span class="image fit"><img src="images/datascience1.webp" alt="" /></span>
                 <p>
                     <h3>Activities involved in include:</h3>
