--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!--<a href="#" class="image"><img src="images/10Alytics.jpg" alt="" data-position="center center" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Data Science Consultant</h2>
+                        <h2>Data Scientist (Part-time)</h2>
                         <p>10Alytics | UK - Remote | Aug. 2023 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
@@ -80,7 +80,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Web Researcher/Data Entry Officer</h2>
-                        <p> Heat Intelligence | US, Remote | Jun. 2022 to Date.</p>
+                        <p> Heat Intelligence | Israel, Remote | Jun. 2022 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -148,7 +148,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Computer Vision using Mediapipe and OpenCV Libraries.</h2>
+                                <h2>Computer Vision.</h2>
                                 <ul class="actions">
                                     <li><a href="10Alytics.html" class="button">Learn more</a></li>
                                 </ul>
@@ -160,7 +160,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Developing Machine Learning Models using supervised and unsupervised learning.</h2>
+                                <h2>Machine Learning.</h2>
                                 <ul class="actions">
                                     <li><a href="10Alytics.html" class="button">Learn more</a></li>
                                 </ul>
@@ -172,7 +172,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Exploratory Data Analysis (EDA) i.e. Feature Engineering, Data Preprocessing.</h2>
+                                <h2>Exploratory Data Analysis (EDA).</h2>
                                 <ul class="actions">
                                     <li><a href="10Alytics.html" class="button">Learn more</a></li>
                                 </ul>
@@ -184,7 +184,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Data Analysis and Visualization using Tableau and MS-Excel</h2>
+                                <h2>Data Analysis and Visualization.</h2>
                                 <ul class="actions">
                                     <li><a href="10Alytics.html" class="button">Learn more</a></li>
                                 </ul>
