--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Computer Vision.</h2>
+                                <h2>Computer Vision using Mediapipe and OpenCV Libraries.</h2>
                                 <ul class="actions">
-                                    <li><a href="10Alytics.html" class="button">Learn more</a></li>
+                                    <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                             <div class="inner">
                                 <h2>Machine Learning.</h2>
                                 <ul class="actions">
-                                    <li><a href="10Alytics.html" class="button">Learn more</a></li>
+                                    <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -174,7 +174,7 @@
                             <div class="inner">
                                 <h2>Exploratory Data Analysis (EDA).</h2>
                                 <ul class="actions">
-                                    <li><a href="10Alytics.html" class="button">Learn more</a></li>
+                                    <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                             <div class="inner">
                                 <h2>Data Analysis and Visualization.</h2>
                                 <ul class="actions">
-                                    <li><a href="10Alytics.html" class="button">Learn more</a></li>
+                                    <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
                             </div>
                         </div>
