--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!--<a href="#" class="image"><img src="images/Seacrest.png" alt="" data-position="top center" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Data Scientist</h2>
+                        <h2>Data Scientist (Part-time)</h2>
                         <p>Seacrest Technology Limited | Nairobi, Kenya | Jan. to Jul. 2023.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
@@ -79,7 +79,7 @@
                 <!--<a href="#" class="image"><img src="images/Heat.jpg" alt="" data-position="25% 25%" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Web Researcher/Data Entry Officer</h2>
+                        <h2>Web Researcher/Data Entry Officer (Part-time)</h2>
                         <p> Heat Intelligence | Israel, Remote | Jun. 2022 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
@@ -148,7 +148,7 @@
                         <!--<a href="#" class="image"><img src="images/Prosp.png" alt="" data-position="25% 25%" /></a>-->
                         <div class="content">
                             <div class="inner">
-                                <h2>Computer Vision using Mediapipe and OpenCV Libraries.</h2>
+                                <h2>Computer Vision.</h2>
                                 <ul class="actions">
                                     <li><a href="Projects.html" class="button">Learn more</a></li>
                                 </ul>
@@ -269,10 +269,10 @@
                         <i class="fa fa4-envelope"></i>
                         <a href="mailto:nancy.chemutai254@gmail.com">Email</a>
                     </p>
-                    <p>
+                    <!--<p>
                         <i class="fa fa4-phone"></i>
-                        <span>(254)-711 538099</span>
-                    </p>
+                        <span>(254)-7xx xxxxxx</span>
+                    </p>-->
                 </div>
                 <p>
                     <h3>Social</h3>
