--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <!--<a href="#" class="image"><img src="images/Heat.jpg" alt="" data-position="25% 25%" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Web Researcher/Data Entry Officer (Part-time)</h2>
+                        <h2>Web Researcher (Part-time)</h2>
                         <p> Heat Intelligence | Israel, Remote | Jun. 2022 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
@@ -269,11 +269,12 @@
                         <i class="fa fa4-envelope"></i>
                         <a href="mailto:nancy.chemutai254@gmail.com">Email</a>
                     </p>
-                    <!--<p>
+                </div>
+                <!--<p>
                         <i class="fa fa4-phone"></i>
                         <span>(254)-7xx xxxxxx</span>
                     </p>-->
-                </div>
+
                 <p>
                     <h3>Social</h3>
                     <ul class="icons">
