--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     </div>
                 </div>
             </section>
+
             <section>
                 <!--<a href="#" class="image"><img src="images/Seacrest.png" alt="" data-position="top center" /></a>-->
                 <div class="content">
@@ -75,11 +76,12 @@
                     </div>
                 </div>
             </section>
+
             <section>
                 <!--<a href="#" class="image"><img src="images/Heat.jpg" alt="" data-position="25% 25%" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Web Researcher (Part-time)</h2>
+                        <h2>Web Researcher/Data Entry Officer (Part-time)</h2>
                         <p> Heat Intelligence | Israel, Remote | Jun. 2022 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
@@ -87,6 +89,7 @@
                     </div>
                 </div>
             </section>
+
             <section>
                 <!--<a href="#" class="image"><img src="images/MMU.jpg" alt="" data-position="25% 25%" /></a>-->
                 <div class="content">
