--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!--<a href="#" class="image"><img src="images/10Alytics.jpg" alt="" data-position="center center" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Data Scientist (Part-time)</h2>
+                        <h2>Data Scientist</h2>
                         <p>10Alytics | UK - Remote | Aug. 2023 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
@@ -68,7 +68,7 @@
                 <!--<a href="#" class="image"><img src="images/Seacrest.png" alt="" data-position="top center" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Data Scientist (Part-time)</h2>
+                        <h2>Data Scientist</h2>
                         <p>Seacrest Technology Limited | Nairobi, Kenya | Jan. to Jul. 2023.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
