--- a/generic.html
+++ b/generic.html
@@ -34,6 +34,35 @@
     <div id="wrapper">
 
         <!-- Main -->
+
+        <section id="main" class="wrapper">
+            <div class="inner">
+                <h2 class="major">Data and AI Govvernance Program, Cyber Shujaa</h2>
+                <span class="image fit"><img src="images/dataAI.jpg" alt="" /></span>
+                <h3>Activities involved in include:</h3>
+                <ul>
+                    <li>Extracted data from a website (web scraping)</li>
+                    <li>Performed EDA on the Titanic dataset</li>
+                    <li>Visualized data using both Power Bi and Tableau</li>
+                </ul>
+                <!-- <p>My work experience includes a variety of roles in data science, data entry, and system support. I have worked with various organizations to enhance their data management processes, develop machine learning models, and provide technical support. My expertise includes data preprocessing, analysis, visualization, and the development of interactive dashboards.</p> -->
+            </div>
+        </section>
+
+
+        <section id="main" class="wrapper">
+            <div class="inner">
+                <h2 class="major">Web Researcher/Data Entry Clerk, Heat Intelligence</h2>
+                <span class="image fit"><img src="images/dataAI.jpg" alt="" /></span>
+                <h3>Activities involved in include:</h3>
+                <ul>
+                    <li>Collect relevant data efficiently from various websites to enhance quality and depth of organization insights, streamline processes, and help management make informed decisions gathered from the web</li>
+                    <li>Performed data preprocessing on collected data by handling missing values and data cleaning on the web data before entering them into the system to ensure 99% accuracy</li>
+                    <li>Extract valuable insights from data obtained from various online sites achieving 98% accuracy</li>
+                </ul>
+            </div>
+        </section>
+
         <section id="main" class="wrapper">
             <div class="inner">
                 <h2 class="major">Data Scientist, 10Alytics</h2>
@@ -69,7 +98,7 @@
             </div>
         </section>
 
-        <section id="main" class="wrapper">
+        <!-- <section id="main" class="wrapper">
             <div class="inner">
                 <h2 class="major">Part-time Lecturer, Multimedia University of Kenya</h2>
                 <span class="image fit"><img src="images/library.jpg" alt="" /></span>
@@ -85,20 +114,7 @@
                     <li>Achieved a 90% student success rate in core courses, indicating effective knowledge transfer and understanding among students.</li>
                 </ul>
             </div>
-        </section>
-
-        <section id="main" class="wrapper">
-            <div class="inner">
-                <h2 class="major">Web Researcher/Data Entry Clerk, Heat Intelligence</h2>
-                <span class="image fit"><img src="images/dataAI.jpg" alt="" /></span>
-                <h3>Activities involved in include:</h3>
-                <ul>
-                    <li>Collect relevant data efficiently from various websites to enhance quality and depth of organization insights, streamline processes, and help management make informed decisions gathered from the web.</li>
-                    <li>Performed data preprocessing on collected data by handling missing values and data cleaning on the web data before entering them into the system to ensure 99% accuracy.</li>
-                    <li>Extract valuable insights from data obtained from various online sites achieving 98% accuracy.</li>
-                </ul>
-            </div>
-        </section>
+        </section> -->
 
         <section id="main" class="wrapper">
             <div class="inner">
