--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 </div>
             </section>
 
-            <section>
-                <!--<a href="#" class="image"><img src="images/MMU.jpg" alt="" data-position="25% 25%" /></a>-->
-                <div class="content">
+            <!-- <section>
+                <a href="#" class="image"><img src="images/MMU.jpg" alt="" data-position="25% 25%" /></a>-->
+            <!-- <div class="content">
                     <div class="inner">
                         <h2>Part-time Lecturer</h2>
                         <p>MMU | Nairobi, Kenya | Sept. 2022 to Date.</p>
@@ -100,8 +100,8 @@
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
                     </div>
-                </div>
-            </section>
+                </div> -->
+            <!-- </section> -->
 
             <section>
                 <!--<a href="#" class="image"><img src="images/MMC.jpg" alt="" data-position="25% 25%" /></a>-->
