--- a/generic.html
+++ b/generic.html
@@ -37,7 +37,7 @@
 
         <section id="main" class="wrapper">
             <div class="inner">
-                <h2 class="major">Data and AI Govvernance Program, Cyber Shujaa</h2>
+                <h2 class="major">Data and AI Specialist, Cyber Shujaag</h2>
                 <span class="image fit"><img src="images/dataAI.jpg" alt="" /></span>
                 <h3>Activities involved in include:</h3>
                 <ul>
