--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Data Scientist</h2>
-                        <p>10Alytics | UK - Remote | Aug. 2023 to Date.</p>
+                        <p>10Alytics | UK - Remote | Aug. 2023 to Jan. 2024.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
