--- a/index.html
+++ b/index.html
@@ -51,25 +51,13 @@
         <!-- One -->
         <section id="one" class="wrapper style2 spotlights">
             <h2>Who am I</h2>
-            <section>
-                <!--<a href="#" class="image"><img src="images/10Alytics.jpg" alt="" data-position="center center" /></a>-->
-                <div class="content">
-                    <div class="inner">
-                        <h2>Data Scientist</h2>
-                        <p>10Alytics | UK - Remote | Aug. 2023 to Jan. 2024.</p>
-                        <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn more</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
 
             <section>
-                <!--<a href="#" class="image"><img src="images/Seacrest.png" alt="" data-position="top center" /></a>-->
+                <!--<a href="#" class="image"><img src="images/Heat.jpg" alt="" data-position="25% 25%" /></a>-->
                 <div class="content">
                     <div class="inner">
-                        <h2>Data Scientist</h2>
-                        <p>Seacrest Technology Limited | Nairobi, Kenya | Jan. to Jul. 2023.</p>
+                        <h2>Data and AI Specialist</h2>
+                        <p> Cyber Shujaa | Nairobi, KE | May. 2025 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
@@ -83,6 +71,32 @@
                     <div class="inner">
                         <h2>Web Researcher/Data Entry Officer (Part-time)</h2>
                         <p> Heat Intelligence | Israel, Remote | Jun. 2022 to Date.</p>
+                        <ul class="actions">
+                            <li><a href="generic.html" class="button">Learn more</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <!--<a href="#" class="image"><img src="images/10Alytics.jpg" alt="" data-position="center center" /></a>-->
+                <div class="content">
+                    <div class="inner">
+                        <h2>Data Scientist</h2>
+                        <p>10Alytics | Alberta, Canada - Remote | Aug. 2023 to Jan. 2024.</p>
+                        <ul class="actions">
+                            <li><a href="generic.html" class="button">Learn more</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <!--<a href="#" class="image"><img src="images/Seacrest.png" alt="" data-position="top center" /></a>-->
+                <div class="content">
+                    <div class="inner">
+                        <h2>Data Scientist</h2>
+                        <p>Seacrest Technology Limited | Nairobi, Kenya | Jan. to Jul. 2023.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
