--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Data and AI Specialist</h2>
-                        <p> Cyber Shujaa | Nairobi, KE | May. 2025 to Date.</p>
+                        <p> Cyber Shujaa | Nairobi, Kenya | May. 2025 to Date.</p>
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn more</a></li>
                         </ul>
