--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@
                         <li><a href="https://twitter.com/Chemutai_Ngeny/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                         <!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
                         <li><a href="https://github.com/chemutai254/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                        <li><a href="https://chemutai254.github.io/" class="icon brands fa-blogger"><span class="label">Blog</span></a></li>
                         <li><a href="https://www.linkedin.com/in/nancychemutai/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="https://www.kaggle.com/chemutai254" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
                     </ul>
                 </p>
                 </ul>
